--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,8 @@ Jinja2==2.10
 MarkupSafe==1.0
 openapi-codec==1.3.2
 Pillow==5.2.0
+psycopg2==2.7.5
+psycopg2-binary==2.7.5
 pytz==2018.5
 requests==2.19.1
 simplejson==3.16.0
